--- a/SDK/Fywork.SDK.Runtime.asmdef
+++ b/SDK/Fywork.SDK.Runtime.asmdef
@@ -6,7 +6,8 @@
         "GUID:9b1c19877f4294a9cb33ff38fc9f1c83",
         "GUID:44a385fe251db4e4ca7133120f81227c",
         "GUID:fe15560e37875664fb12271e1d97fbdc",
-        "GUID:d3c3876f8e7e22e4593f67557fe94f4e"
+        "GUID:d3c3876f8e7e22e4593f67557fe94f4e",
+        "GUID:44f1fc6cfaf15f542944faf850d961eb"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
